--- a/Lesson6_Assignment/photos.css
+++ b/Lesson6_Assignment/photos.css
@@ -1,7 +1,7 @@
 /*      
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Kristen Howard
+    Date:   10/23/15
     Filename: photos.css
 */
 
